// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/calculations/Options should match snapshot 1`] = `
<div>
  <div
    class="CalculationOptions css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="CalculationOptions__control css-1s59geg-Control"
    >
      <div
        class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1kliayw-ValueContainer"
      >
        <div
          class="CalculationOptions__single-value css-3hkq9s-singleValue"
        >
          Calculate
        </div>
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          aria-readonly="true"
          class="css-mohuvp-dummyInput-DummyInput"
          id="react-select-2-input"
          inputmode="none"
          role="combobox"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__clear-indicator css-31haax-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="CalculationOptions__indicator-separator css-1uei4ir-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-y45573-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="none"
    />
  </div>
</div>
`;

exports[`components/calculations/Options should match snapshot menu open 1`] = `
<div>
  <div
    class="CalculationOptions css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="CalculationOptions__control CalculationOptions__control--menu-is-open css-1s59geg-Control"
    >
      <div
        class="CalculationOptions__value-container CalculationOptions__value-container--has-value css-1kliayw-ValueContainer"
      >
        <div
          class="CalculationOptions__single-value css-3hkq9s-singleValue"
        >
          Calculate
        </div>
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="react-select-3-listbox"
          aria-expanded="true"
          aria-haspopup="true"
          aria-readonly="true"
          class="css-mohuvp-dummyInput-DummyInput"
          id="react-select-3-input"
          inputmode="none"
          role="combobox"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="CalculationOptions__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__clear-indicator css-31haax-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="CalculationOptions__indicator-separator css-1uei4ir-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="CalculationOptions__indicator CalculationOptions__dropdown-indicator css-y45573-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <div
      class="CalculationOptions__menu css-45h7mv-menu"
    >
      <div
        aria-multiselectable="false"
        class="CalculationOptions__menu-list css-1d1qzc4-MenuList"
        id="react-select-3-listbox"
        role="listbox"
      >
        <div
          aria-disabled="false"
          aria-selected="false"
          class="CalculationOptions__option css-x3yilo-option"
          id="react-select-3-option-0"
          role="option"
          tabindex="-1"
        >
          Count
        </div>
        <div
          aria-disabled="false"
          aria-selected="false"
          class="CalculationOptions__option css-x3yilo-option"
          id="react-select-3-option-1"
          role="option"
          tabindex="-1"
        >
          Max
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="none"
    />
  </div>
</div>
`;
